--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,7 @@ jobs:
           docker save -o docker-image.tar ${{ env.IMAGE_NAME }}
       - uses: actions/upload-artifact@v3
         with:
-          name: docker-image-1
+          name: oc_p13_image
           path: docker-image.tar
 
   push-image:
@@ -51,7 +51,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: docker-image-1
+          name: oc_p13_image
       - name: Push docker image
         run: |
           docker load -i docker-image.tar
@@ -65,7 +65,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: docker-image-1
+          name: oc_p13_image
       - name: Deploy docker image
         env:
           HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
