--- a/procfile
+++ b/procfile
@@ -1,2 +1,2 @@
-web: python manage.py runserver 0.0.0.0:8000
-# web: gunicorn oc_lettings_site.wsgi
+# web: python manage.py runserver 0.0.0.0:8000
+web: gunicorn oc_lettings_site.wsgi
