--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -72,8 +72,8 @@ jobs:
           HEROKU_APP_NAME: ${{ vars.HEROKU_APP_NAME }}
         run: |
           docker load -i docker-image.tar
-          docker tag ${{ env.IMAGE_NAME }} registry.heroku.com/${{ env.HEROKU_APP_NAME }}/web
+          docker tag ${{ env.IMAGE_NAME }} registry.heroku.com/${{ env.HEROKU_APP_NAME }}
           docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
           # heroku container:rochdi.guezguez@gmail.com
-          docker push registry.heroku.com/${{ env.HEROKU_APP_NAME }}/web
+          docker push registry.heroku.com/${{ env.HEROKU_APP_NAME }}
           heroku container:release web -a ${{ env.HEROKU_APP_NAME }}
