--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -73,7 +73,6 @@ jobs:
         run: |
           docker load -i docker-image.tar
           docker tag ${{ env.IMAGE_NAME }} registry.heroku.com/${{ env.HEROKU_APP_NAME }}
-          docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
-          # heroku container:rochdi.guezguez@gmail.com
+          # docker login --username=_ --password=${{ env.HEROKU_API_KEY }} registry.heroku.com
           docker push registry.heroku.com/${{ env.HEROKU_APP_NAME }}
           heroku container:release web -a ${{ env.HEROKU_APP_NAME }}
