--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -62,6 +62,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main'}}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Deploy docker image
         env:
           IMAGE_NAME: letting_test
