--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Deploy docker image
         env:
           IMAGE_NAME: letting_test
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+          HEROKU_API_KEY: ${{ vars.HEROKU_API_KEY }}
           HEROKU_APP_NAME: ${{ vars.HEROKU_APP_NAME }}
         run: |
           docker build -t ${{ env.IMAGE_NAME }} .
